--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -1,14 +1,20 @@
+<div class="container">
 
-<%= simple_form_for(@flat) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :address %>
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <%= simple_form_for(@flat) do |f| %>
+        <%= f.error_notification %>
+        <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+      
+        <div class="form-inputs">
+          <%= f.input :name %>
+          <%= f.input :address %>
+        </div>
+      
+        <div class="form-actions">
+          <%= f.button :submit %>
+        </div>
+      <% end %>    
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+</div>
